# rules_minijinja

./: .bazelrc  .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: bazel.yaml  buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/color_palette/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  color_app.py  color_app_test.py  colors_enum.py.j2  colors_spec.yaml  palette_class.py.j2  palette_spec.yaml
e2e/smoke/: MODULE.bazel  README.md  greeting.txt.j2  greeting_expected.txt
minijinja/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
minijinja/examples/simple/: BUILD.bazel
minijinja/private/: BUILD.bazel  minijinja_template.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
minijinja/tests/: versions_test.bzl
tools/: BUILD.bazel
