bazel_dep(name = "rules_minijinja", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_minijinja",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.40.0", dev_dependency = True)

minijinja = use_extension("@rules_minijinja//minijinja:extensions.bzl", "minijinja")
minijinja.toolchain(minijinja_version = "2.12.0")
use_repo(minijinja, "minijinja_toolchains")

register_toolchains("@minijinja_toolchains//:all")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
use_repo(python, "python_3_11")
