load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//minijinja:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//minijinja:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//minijinja:__subpackages__"],
)

bzl_library(
    name = "minijinja_template",
    srcs = ["minijinja_template.bzl"],
    visibility = ["//minijinja:__subpackages__"],
)

exports_files([
    "minijinja_template.bzl",
])
